# anchor-gen

./: README.md
crates/anchor-gen/: Cargo.toml
crates/anchor-gen/src/: lib.rs
crates/anchor-generate-cpi-crate/: Cargo.toml
crates/anchor-generate-cpi-crate/src/: lib.rs
crates/anchor-idl/: Cargo.toml
crates/anchor-idl/src/: event.rs  instruction.rs  lib.rs  program.rs  state.rs  typedef.rs
examples/govern-cpi/: Cargo.toml
examples/jup-v6/: Cargo.toml  idl.json
examples/jup-v6/src/: lib.rs  output.rs
examples/marinade-cpi/: Cargo.toml
examples/whirlpools/: Cargo.toml
examples/whirlpools/src/: lib.rs
