[package]
name = "anchor-idl"
version = "0.4.0"
edition = "2021"
description = "Generates Rust code from an Anchor IDL."
authors = ["Ian Macalinao <ian@saber.so>"]
repository = "https://github.com/saber-hq/anchor-gen"
license = "Apache-2.0"
keywords = ["solana", "anchor"]

[features]
compat-program-result = []

[dependencies]
anchor-syn = { version = "0.29.0", features = ["idl-types"] }
darling = "0.14"
heck = "0.4.1"
hex = "0.4.3"
proc-macro2 = "1"
quote = "1"
serde_json = "1.0.107"
sha256 = "1.5.0"
syn = { version = "1", features = ["full"] }
anchor-lang = "0.29.0"
